# pow2core

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  configuration.md  default.md  documentation.md  feature_request.md  performance.md
.github/workflows/: release.yaml
src/pow2core/: __init__.py
src/pow2core/config/: const.py  load_config.py  schema.py
src/pow2core/cpu/: calculator.py  schema.py
src/pow2core/distribute_strategies/: const.py  fixed_group.py  level_group.py  schema.py
src/pow2core/factors/: const.py  registry.py  schema.py
src/pow2core/factors/algorithms/: __init__.py  base.py  fixed.py  linear.py  normalize.py  threshold.py  value.py
src/pow2core/factors/implementations/: __init__.py  asset.py  combination.py  d_days.py  is_listing.py  listing.py  listing_count.py  listing_days.py  listing_stats.py  rare.py  (+4 more)
tests/config/: example.yaml  test_load_config_by_config_file.py  test_load_config_example.py  test_load_config_gcw.py  test_load_config_gs.py  test_load_config_og.py
tests/cpu/: test_calculator.py
tests/distribute_strategies/: test_fixed_group.py  test_level_group.py
tests/factors/algorithms/: test_fixed.py  test_linear.py  test_normalize.py  test_threshold.py  test_value.py
tests/factors/implementations/: test_combination_by_value.py  test_d_days_by_linear_normalize.py  test_is_listing_by_fixed.py  test_listing.py  test_listing_count_by_threshold.py  test_listing_days_by_linear.py  test_listing_stats.py  test_mining_limit_reached_by_fixed.py  test_pop_user_by_fixed.py  test_rare_by_fixed.py  test_rare_by_linear_normalize.py  test_slot.py
(+22 files in other folders)
